Add UIs for controlling each interaction source

--- a/InteractionManagerUI/src/org/mongkie/ui/im/InteractionsControlPanel.form
+++ b/InteractionManagerUI/src/org/mongkie/ui/im/InteractionsControlPanel.form
@@ -25,7 +25,7 @@
                       <Component id="linkAllButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="unlinkAllButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="134" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="131" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
@@ -37,12 +37,13 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="headerImg" min="-2" pref="23" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="squeezeBox" pref="197" max="32767" attributes="0"/>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <Component id="squeezeBox" pref="201" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="unlinkAllButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="linkAllButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
