--- a/DataTableUI/src/org/mongkie/ui/datatable/graph/FilterToolsPanel.form
+++ b/DataTableUI/src/org/mongkie/ui/datatable/graph/FilterToolsPanel.form
@@ -40,6 +40,7 @@
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/mongkie/ui/datatable/graph/Bundle.properties" key="FilterToolsPanel.filterInputTextField.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[100, 26]"/>
         </Property>
@@ -49,9 +50,10 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="1">
-            <StringItem index="0" value="Symbol"/>
+            <StringItem index="0" value="NONE"/>
           </StringArray>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[100, 26]"/>
         </Property>
