--- a/ClusteringUI/src/org/mongkie/ui/clustering/ClusteringTopComponent.form
+++ b/ClusteringUI/src/org/mongkie/ui/clustering/ClusteringTopComponent.form
@@ -216,6 +216,7 @@
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
               <ResourceString bundle="org/mongkie/ui/clustering/Bundle.properties" key="ClusteringTopComponent.pieLink.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
+            <Property name="enabled" type="boolean" value="false"/>
             <Property name="focusPainted" type="boolean" value="false"/>
           </Properties>
           <Constraints>
