--- a/VisualizationUI/src/org/mongkie/ui/visualization/options/EdgeSettingPanel.form
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/options/EdgeSettingPanel.form
@@ -158,7 +158,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JColorButton(WindowManager.getDefault().getMainWindow(), ColorLib.getColor(Config.COLOR_DEFAULT_EDGE_STROKE))"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JColorButton(WindowManager.getDefault().getMainWindow(), ColorLib.getColor((Integer) visuals.get(VisualItem.STROKECOLOR)))"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="fontLabel">
@@ -170,13 +170,11 @@
     </Component>
     <Component class="javax.swing.JButton" name="fontButton">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
-          <FontInfo relative="true">
-            <Font component="fontButton" property="font" relativeSize="true" size="-1"/>
-          </FontInfo>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="Config.FONT_DEFAULT_EDGETEXT.getFontName() + &quot;, &quot; + Config.FONT_DEFAULT_EDGETEXT.getSize()" type="code"/>
+          <Connection code="((Font) visuals.get(VisualItem.FONT)).getFontName() + &quot;, &quot; + ((Font) visuals.get(VisualItem.FONT)).getSize()" type="code"/>
         </Property>
         <Property name="borderPainted" type="boolean" value="false"/>
       </Properties>
@@ -188,7 +186,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JColorButton(WindowManager.getDefault().getMainWindow(), ColorLib.getColor(Config.COLOR_DEFAULT_EDGE_TEXT))"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JColorButton(WindowManager.getDefault().getMainWindow(), ColorLib.getColor((Integer) visuals.get(VisualItem.TEXTCOLOR)))"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="resetAllButton">
