--- a/VisualizationUI/src/org/mongkie/ui/visualization/options/NodeSettingPanel.form
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/options/NodeSettingPanel.form
@@ -116,8 +116,8 @@
     </Component>
     <Component class="javax.swing.JButton" name="fontFamilyButton">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="12" style="0"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="FontLib.getFont(((Font) visuals.get(VisualItem.FONT)).getName(), ((Font) visuals.get(VisualItem.FONT)).getStyle(), 13)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="((Font) visuals.get(VisualItem.FONT)).getFontName() + &quot;, &quot; + ((Font) visuals.get(VisualItem.FONT)).getSize()" type="code"/>
