--- a/VisualizationUI/src/org/mongkie/ui/visualization/options/EdgeSettingPanel.form
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/options/EdgeSettingPanel.form
@@ -158,7 +158,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JColorButton(WindowManager.getDefault().getMainWindow(), ColorLib.getColor((Integer) visuals.get(VisualItem.STROKECOLOR)))"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JColorButton(WindowManager.getDefault().getMainWindow(), ColorLib.getColor((Integer) style.get(VisualItem.STROKECOLOR)))"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="fontLabel">
@@ -171,10 +171,10 @@
     <Component class="javax.swing.JButton" name="fontButton">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="FontLib.getFont(((Font) visuals.get(VisualItem.FONT)).getName(), ((Font) visuals.get(VisualItem.FONT)).getStyle(), 13)" type="code"/>
+          <Connection code="FontLib.getFont(((Font) style.get(VisualItem.FONT)).getName(), ((Font) style.get(VisualItem.FONT)).getStyle(), 13)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="((Font) visuals.get(VisualItem.FONT)).getFontName() + &quot;, &quot; + ((Font) visuals.get(VisualItem.FONT)).getSize()" type="code"/>
+          <Connection code="((Font) style.get(VisualItem.FONT)).getFontName() + &quot;, &quot; + ((Font) style.get(VisualItem.FONT)).getSize()" type="code"/>
         </Property>
         <Property name="borderPainted" type="boolean" value="false"/>
       </Properties>
@@ -186,7 +186,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JColorButton(WindowManager.getDefault().getMainWindow(), ColorLib.getColor((Integer) visuals.get(VisualItem.TEXTCOLOR)))"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JColorButton(WindowManager.getDefault().getMainWindow(), ColorLib.getColor((Integer) style.get(VisualItem.TEXTCOLOR)))"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="resetAllButton">
