Option to toggle which to export internal id columns or not

--- a/ExportPlugins/src/org/mongkie/exporter/plugins/graph/ExporterSettingUICSV.form
+++ b/ExportPlugins/src/org/mongkie/exporter/plugins/graph/ExporterSettingUICSV.form
@@ -43,6 +43,10 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="printHeaderCheckBox" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="exportInternalIdsCheckBox" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -60,6 +64,8 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="printHeaderCheckBox" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="exportInternalIdsCheckBox" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -103,6 +109,13 @@
           <ResourceString bundle="org/mongkie/exporter/plugins/graph/Bundle.properties" key="ExporterSettingUICSV.edgeRadioButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
         <Property name="focusPainted" type="boolean" value="false"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="exportInternalIdsCheckBox">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/mongkie/exporter/plugins/graph/Bundle.properties" key="ExporterSettingUICSV.exportInternalIdsCheckBox.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
       </Properties>
     </Component>
   </SubComponents>
