Add horizontal glue between action buttons and tools of the data table tool bar

--- a/DataTableUI/src/org/mongkie/ui/datatable/DataTableTopComponent.form
+++ b/DataTableUI/src/org/mongkie/ui/datatable/DataTableTopComponent.form
@@ -4,6 +4,16 @@
   <NonVisualComponents>
     <Component class="javax.swing.ButtonGroup" name="tableButtonGroup">
     </Component>
+    <Component class="javax.swing.Box$Filler" name="glueAfterTableActions">
+      <Properties>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[32767, 0]"/>
+        </Property>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="classDetails" type="java.lang.String" value="Box.Filler.HorizontalGlue"/>
+      </AuxValues>
+    </Component>
   </NonVisualComponents>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="1"/>
