Enrichment UI fixes

--- a/EnrichmentAnalysisUI/src/org/mongkie/ui/enrichment/EnrichmentChooserTopComponent.form
+++ b/EnrichmentAnalysisUI/src/org/mongkie/ui/enrichment/EnrichmentChooserTopComponent.form
@@ -41,7 +41,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="runButton" alignment="1" min="-2" pref="78" max="-2" attributes="0"/>
+                  <Component id="runButton" alignment="1" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Group type="102" alignment="0" attributes="1">
@@ -83,9 +83,9 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="settingsSeparator" linkSize="2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="settingsPanel" pref="101" max="32767" attributes="0"/>
+              <Component id="settingsPanel" pref="105" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="runButton" min="-2" pref="32" max="-2" attributes="0"/>
+              <Component id="runButton" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
